--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -94,7 +94,7 @@
                     </div>
                 </div>
                 <div class="integrante">
-                    <img src="integrante4.jpg" alt="Integrante 4">
+                    <img src="assets/joao.jpg" alt="Integrante 4">
                     <h2>João Seeches</h2>
                     <p>Idade: 22 anos</p>
                     <p>Função: Desenvolvedor de Software</p>
