--- a/index.html
+++ b/index.html
@@ -89,6 +89,21 @@
             <img src="assets/imagem3.png" alt="Imagem 4">
         </div>
     </main>
+    <!-- Inclui o VLibras -->
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+            <div class="vw-plugin-top-wrapper"></div>
+        </div>
+    </div>
+
+
+    <div class="font-controls">
+        <button id="decrease-font" aria-label="Diminuir tamanho da fonte">A-</button>
+        <button id="increase-font" aria-label="Aumentar tamanho da fonte">A+</button>
+    </div>
+    <script src="libras.js"></script>
+    <script src="acessibilidade.js"></script>
 
     <footer>
         <p>&copy; 2024 Site de Sustentabilidade. Todos os direitos reservados.</p>
