--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                         <li><a href="noticias.html">Notícias</a></li>
                     </ul>
                 </li>
+                <li><a href="pesquisa.html">Pesquisa</a></li>
                 <li><a href="sobre-nos.html">Sobre Nós</a></li>
             </ul>
             <div class="btn-contato">
