--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -24,6 +24,7 @@
                         <li><a href="noticias.html">Notícias</a></li>
                     </ul>
                 </li>
+                <li><a href="pesquisa.html">Pesquisa</a></li>
                 <li><a href="sobre-nos.html">Sobre Nós</a></li>
             </ul>
             <div class="btn-contato">
@@ -115,7 +116,21 @@
         </section>
     </main>
     
+<!-- Inclui o VLibras -->
+<div vw class="enabled">
+    <div vw-access-button class="active"></div>
+    <div vw-plugin-wrapper>
+        <div class="vw-plugin-top-wrapper"></div>
+    </div>
+</div>
 
+
+<div class="font-controls">
+    <button id="decrease-font" aria-label="Diminuir tamanho da fonte">A-</button>
+    <button id="increase-font" aria-label="Aumentar tamanho da fonte">A+</button>
+</div>
+<script src="libras.js"></script>
+<script src="acessibilidade.js"></script>
     <footer>
         <p>&copy; 2024 Site de Sustentabilidade. Todos os direitos reservados.</p>
     </footer>
