--- a/tripe.html
+++ b/tripe.html
@@ -27,6 +27,7 @@
                 <li><a href="sobre-nos.html">Sobre Nós</a></li>
             </ul>
             <div class="btn-contato">
+                <li><a href="pesquisa.html">Pesquisa</a></li>
                 <a href="contato.html"><button>Contato</button></a>
             </div>
         </nav>
@@ -66,7 +67,21 @@
             </div>
         </section>
     </main>
+<!-- Inclui o VLibras -->
+<div vw class="enabled">
+    <div vw-access-button class="active"></div>
+    <div vw-plugin-wrapper>
+        <div class="vw-plugin-top-wrapper"></div>
+    </div>
+</div>
 
+
+<div class="font-controls">
+    <button id="decrease-font" aria-label="Diminuir tamanho da fonte">A-</button>
+    <button id="increase-font" aria-label="Aumentar tamanho da fonte">A+</button>
+</div>
+<script src="libras.js"></script>
+<script src="acessibilidade.js"></script>
     <footer>
         <p>&copy; 2024 Site de Sustentabilidade. Todos os direitos reservados.</p>
     </footer>
